k8s/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.4-php8.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-pv
              mountPath: /var/www/html
      volumes:
        - name: wordpress-pv
          emptyDir: {}
