k8s/wordpress/traefik-service-nodeport.yaml
# ---------- IngressClass (für IngressClassName: traefik) ----------
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller

---
# ---------- Traefik Deployment ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller  # <<< WICHTIG
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress=true"                 # <<< WICHTIG
            - "--providers.kubernetesingress.ingressclass=traefik" # <<< WICHTIG
            - "--api.insecure=true"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443

---
# ---------- Traefik Service (NodePort) ----------
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 32080
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 32443
