k8s/wordpress/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - grafana.drachenbyte.ddns-ip.net
  rules:
  - host: grafana.drachenbyte.ddns-ip.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  tls:
    - hosts:
      - grafana.drachenbyte.ddns-ip.net
      secretName: gr-secret
